# DECENTRALIZED-DNS-

./: .env.example  .env.test  .gitignore  .markdownlintignore  AGENTS.MD  ARCHITECTURE.md  AUDIT_FIX_REPORT.md  AUDIT_REPORT.md  AUDIT_REPORT_COPILOT.md  AUDIT_REPORT_MAIN.md  CLOUDFLARE_DEPLOY.md  CONTRIBUTING.md  DEVNET_RUNBOOK.md  MERGE_GUARDRAILS.md  MERGE_LOG.jsonl  MERGE_LOG.md  MERGE_QUEUE.md  Makefile  OPERATOR_LOG.md  PR3_WIP.md  PROSPECTUS.md  README.md  REPO_AUDIT_LOG.md  ROADMAP.md  Repo-Structure.md  SECURITY.md  STATUS.md  VERIFIED.md  automerge  docker-compose.dev.yml  docker-compose.validation.yml  docker-compose.wp-test.yml  docker-compose.yml  package-lock.json  package.json
.github/: pull_request_template.md
_deprecated/: README.md
adapters/: ADAPTER_INTERFACE.md  ADAPTORS_OVERVIEW.md  README.md  layoutanchorv1.md  layoutsv1.2.md  readmeandlayout.md
adaptors/: ADAPTER_INTERFACE.md  README.md  layoutanchorv1.md  layoutsv1.2.md  package-lock.json  package.json  read.me  readmeandlayout.md
client/: README.md  layout.md  package-lock.json  package.json
compat-control-plane/: Dockerfile  README.md  package-lock.json  package.json
config/: pay_quote_pricing.json  treasury-policy.json
contracts/: README.md  foundry.toml
coordinator/: README.md  package-lock.json  package.json
core/: README.md  README_PROGRESS.md  layout.md  package-lock.json  package.json  tsconfig.json
ddns-core/: README.md  layout.md  package-lock.json  package.json  tsconfig.json
docs/: 00-vision.md  01-architecture-overview.md  02-resolution-backends.md  03-watchdogs-and-fallback.md  04-functional-equivalence-proofs.md  05-tokenomics.md  06-resilience-tokenomics.md  07-routing-engine.md  08-threat-model.md  09-roadmap.md  10-adoption-and-product-strategy.md  11-workers-and-edge-compute.md  12-domain-services-and-registrar.md  13-client-apps-and-extensions.md  13-client-apps-and-extensions.md (apps + extension UX and policy  14-wallet-identity-keychain.md  15-email-and-anti-spam.md  ADAPTERS.md  ADOPTION.md  AI_PLUGINS_AUTOPILOT.md  API.md  ATTACK_MODE.md  AUDIT_PREPARATION.md  CANONICAL_DEMO_PATH.md  CERTS.md  CLOUDFLARE_AGENTS_BRIGHTDATA_MCP.md  CLOUDFLARE_PAGES.md  CONFIG.md  CONTRIBUTING.md  DEMO_ENDPOINT_CF.md  DEVELOPER_API.md  DEVNET_RUNBOOK.md  DEVNET_STATUS.md  DNS_NAME_ASSIGNMENT.md  DOCKER_DEV.md  DOH_TRDL.md  DOMAIN_BANNER_INTEGRATION.md  DOMAIN_CONTINUITY.md  DOMAIN_CONTINUITY_HOSTING_MVP.md  DOMAIN_CONTINUITY_UI.md  (+99 more)
escrow/: README.md  package.json
examples/: node-doh.ts  node-resolve.ts  worker-resolve.ts
gateway/: ADAPTERS.md  Dockerfile.stack  README.md  package-lock.json  package.json  tsconfig.json
infra/: README.md
labs/: docker-compose.validation.yml
labs/solana/programs/ddns_anchor/: Cargo.toml
labs/solana/programs/ddns_anchor/src/: lib.rs
solana/: Anchor.toml  Cargo.toml  README.md  VERIFIED.md  package-lock.json  package.json  program_ids.json
solana/patches/constant_time_eq/: Cargo.toml  lib.rs
solana/programs/ddns_anchor/: Cargo.toml
solana/programs/ddns_anchor/src/: lib.rs
solana/programs/ddns_cache_head/: Cargo.toml
solana/programs/ddns_cache_head/src/: lib.rs
solana/programs/ddns_domain_rewards/: Cargo.toml
solana/programs/ddns_domain_rewards/src/: lib.rs
solana/programs/ddns_escrow/: Cargo.toml
solana/programs/ddns_escrow/src/: lib.rs
solana/programs/ddns_miner_score/: Cargo.toml
solana/programs/ddns_miner_score/src/: lib.rs
solana/programs/ddns_names/: Cargo.toml
solana/programs/ddns_names/src/: lib.rs
solana/programs/ddns_ns_incentives/: Cargo.toml
solana/programs/ddns_ns_incentives/src/: lib.rs
solana/programs/ddns_operators/: Cargo.toml
solana/programs/ddns_operators/src/: lib.rs
solana/programs/ddns_quorum/: Cargo.toml
solana/programs/ddns_quorum/src/: lib.rs
solana/programs/ddns_registry/: Cargo.toml
solana/programs/ddns_registry/src/: lib.rs
solana/programs/ddns_rent_bond/: Cargo.toml
solana/programs/ddns_rent_bond/src/: lib.rs
solana/programs/ddns_rep/: Cargo.toml
solana/programs/ddns_rep/src/: lib.rs
solana/programs/ddns_rewards/: Cargo.toml
solana/programs/ddns_rewards/src/: lib.rs
solana/programs/ddns_stake/: Cargo.toml
solana/programs/ddns_stake/src/: lib.rs
solana/programs/ddns_stake_gov/: Cargo.toml
solana/programs/ddns_stake_gov/src/: lib.rs
solana/programs/ddns_watchdog_policy/: Cargo.toml
solana/programs/ddns_watchdog_policy/src/: lib.rs
solana/programs/ddns_witness_rewards/: Cargo.toml
solana/programs/ddns_witness_rewards/src/: lib.rs
solana/scripts/: _attack_mode.ts  apply_metadata.ts  cache_head.ts  cache_sign_upsert.ts  cache_upsert_post.ts  devnet_audit.ts  devnet_verify_deployed.ts  domain_owner_register.ts  domain_rewards.ts  escrow_deposit.ts  escrow_init.ts  escrow_utils.ts  make_receipt.ts  miner_score.ts  mint_toll_pass.ts  names.ts  ns_attest.ts  ns_claim.ts  ns_usage.ts  operators.ts  rep.ts  resolve.ts  rewards.ts  route_create.ts  route_lib.ts  route_list.ts  route_sign_witness.ts  route_status.ts  sample-metadata.json  set_route.ts  slash_gov.ts  snapshot_gov.ts  stake.ts  stake_gov.ts  submit_receipts.ts  surfpool_emulate_mainnet.sh  surfpool_plan.ts  voucher_issue_toll.ts  voucher_redeem_toll.ts  watchdog.ts  (+2 more)
solana/scripts/lib/: anchor_programs.test.ts  anchor_programs.ts  metadata.test.ts  metadata.ts  token.test.ts  token.ts
solana/tests/: ddns_cache_head.ts  ddns_domain_rewards.ts  ddns_escrow.ts  ddns_miner_score.ts  ddns_names.ts  ddns_operators.ts  ddns_rep.ts  ddns_rewards.ts  ddns_stake_gov.ts  ddns_watchdog_policy.ts  design3.ts  ns_incentives_usage.ts
solana/tools/metadata/: apply_metadata.ts  package-lock.json  package.json
workers/node-agent/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
workers/node-agent/config/: config.example.json
workers/node-agent/docs/: NODE_AGENT_LINUX.md
workers/node-agent/src/: agent.ts.deprecated  cache.rs  coordinator.rs  http_server.rs  keys.rs  verify.rs
workers/node-agent/src/tasks/: prefetch.rs  registry_root.rs  storage.rs  verify.ts.deprecated
(+1055 files in other folders)
