[workspace]
resolver = "2"
members = [
  "programs/ddns_anchor",
  "programs/ddns_registry",
  "programs/ddns_quorum",
  "programs/ddns_stake",
  "programs/ddns_watchdog_policy",
  "programs/ddns_stake_gov",
  "programs/ddns_escrow",
  "programs/ddns_domain_rewards",
  "programs/ddns_ns_incentives",
  "programs/ddns_rewards",
  "programs/ddns_operators",
]

[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
