[workspace]
resolver = "2"
members = [
  "programs/ddns_anchor",
  "programs/ddns_registry",
  "programs/ddns_quorum",
  "programs/ddns_stake",
  "programs/ddns_watchdog_policy",
  "programs/ddns_stake_gov",
  "programs/ddns_escrow",
  "programs/ddns_domain_rewards",
  "programs/ddns_ns_incentives",
  "programs/ddns_rewards",
  "programs/ddns_operators",
  "programs/ddns_miner_score",
  "programs/ddns_witness_rewards",
  "programs/ddns_names",
  "programs/ddns_cache_head",
  "programs/ddns_rep",
  "programs/ddns_rent_bond",
]

[profile.release]
overflow-checks = true
lto = false
codegen-units = 1
