[package]
name = "ddns_anchor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
cpi = []
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
sha2 = "0.10"

anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", default-features = false, features = ["token"] }
