[package]
name = "ddns_escrow"
version = "0.1.0"
description = "DDNS escrow + toll voucher redemption (MVP)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ddns_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
anchor-debug = []
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", default-features = false, features = ["token"] }
solana-program = "2.3.0"
