[package]
name = "ddns_escrow"
version = "0.1.0"
description = "DDNS escrow + toll voucher redemption (MVP)"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "ddns_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
anchor-debug = []
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", default-features = false, features = ["token", "token_2022"] }
solana-sdk-ids = "2.2.1"
solana-sha256-hasher = "2.3.0"
