[package]
name = "ddns_witness_rewards"
version = "0.1.0"
description = "Permissionless witness rewards with bond-gated batch submissions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ddns_witness_rewards"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", default-features = false, features = ["token"] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
