[package]
name = "ddns_anchor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
metaplex = ["mpl-token-metadata"]

[dependencies]
sha2 = "0.10"

anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", default-features = false, features = ["token"] }
mpl-token-metadata = { version = "4.1.2", optional = true }
